--- a/src/assets/scss/elements/_service.scss
+++ b/src/assets/scss/elements/_service.scss
@@ -311,7 +311,7 @@
                 }
             }
             p {
-                color: var(--color-gray);
+                color: var(--color-white);
                 padding: 0 30px;
                 @media #{$laptop-device} {
                     padding: 0;
