--- a/src/assets/scss/default/_spacing.scss
+++ b/src/assets/scss/default/_spacing.scss
@@ -1,5 +1,5 @@
 /*=========================
-    Section Separation 
+    layouts.tsx Separation
 ==========================*/
 
 .letterspacing--2 {
